--- a/static/global.css
+++ b/static/global.css
@@ -1,21 +1,47 @@
 /*全局样式表*/
-html,body,#app{
+html, body, #app {
   height: 100%;
   margin: 0;
   padding: 0;
   min-width: 1366px;
 }
-.el-breadcrumb{
+
+.el-breadcrumb {
   margin-bottom: 15px;
   font-size: 12px;
 }
-.el-card{
-  box-shadow:  0 1px 1px rgba(0,0,0,0.15) !important;
+
+.el-card {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
 }
-.el-table{
+
+.el-table {
   margin-top: 15px;
   font-size: 12px;
 }
-.el-pagination{
+
+.el-pagination {
   margin-top: 15px;
 }
+
+.el-cascader-menu {
+  height: 260px !important;
+}
+
+.el-cascader-panel .el-radio {
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.el-cascader-panel .el-radio__input {
+  visibility: hidden;
+}
+
+.el-cascader-panel .el-cascader-node__postfix {
+  top: 10px;
+}
+
